--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -41,7 +41,7 @@
                     "help": "user name of this service in matrix"
                 },
                 "botPassword": {
-                    "type": "text",
+                    "type": "password",
                     "sm": 12,
                     "md": 6,
                     "lg": 6,
