More explanation and more error output
- README.md updated
- error outputs added
- repeat to false for password field

[https://github.com/oelison/ioBroker.matrix-org/issues/3]

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -42,6 +42,7 @@
                 },
                 "botPassword": {
                     "type": "password",
+                    "repeat": false,
                     "sm": 12,
                     "md": 6,
                     "lg": 6,
