--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "url": "https://github.com/oelison/ioBroker.matrix-org"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.6.0"
+    "@iobroker/adapter-core": "^2.6.0",
+    "matrix-js-sdk": "^19.0.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^2.2.2",
@@ -31,8 +32,8 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^14.18.21",
     "@types/proxyquire": "^1.3.28",
-    "@types/react-dom": "^17.0.17",
     "@types/react": "^17.0.47",
+    "@types/react-dom": "^17.0.17",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
     "chai": "^4.3.6",
@@ -41,8 +42,8 @@
     "eslint-plugin-react": "^7.30.1",
     "mocha": "^10.0.0",
     "proxyquire": "^2.1.3",
-    "react-dom": "^17.0.2",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
     "typescript": "~4.7.4"
