--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -45,7 +45,7 @@ jobs:
           os: ${{ matrix.os }}
           # Uncomment the following line if your adapter cannot be installed using 'npm ci'
           # install-command: 'npm install'
-          build: true
+          build: false
           
   # TODO: To enable automatic npm releases, create a token on npmjs.org 
   # Enter this token as a GitHub secret (with name NPM_TOKEN) in the repository options
@@ -69,6 +69,6 @@ jobs:
           node-version: '14.x'
           # Uncomment the following line if your adapter cannot be installed using 'npm ci'
           # install-command: 'npm install'
-          build: true
+          build: false
           npm-token: ${{ secrets.NPM_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
