--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.0",
-    "matrix-js-sdk": "^19.0.0"
+    "matrix-js-sdk": "^19.0.0",
+    "node-localstorage": "^2.2.1",
+    "olm": "https://packages.matrix.org/npm/olm/olm-3.2.1.tgz"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^2.2.2",
