--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.matrix-org",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Adapter for pushing matrix messages into a room",
   "author": {
     "name": "Christian Oelschlegel",
@@ -71,9 +71,7 @@
     "check": "tsc --noEmit -p tsconfig.check.json",
     "lint": "eslint --ext .js,.jsx",
     "translate": "translate-adapter",
-    "release": "release-script patch --yes",
-    "release-minor": "release-script minor --yes",
-    "release-major": "release-script major --yes"
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/oelison/ioBroker.matrix-org/issues"
