--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "type": "git",
     "url": "https://github.com/oelison/ioBroker.matrix-org"
   },
+  "engines" : { 
+    "node" : ">=18.0.0"
+  },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.8",
-    "matrix-js-sdk": "^19.1.0"
+    "matrix-js-sdk": "^24.0.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
