functional adaption of auto join * add checkbox for enabling auto join * default like before without auto join * axios removed [no-ticket]

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -48,6 +48,15 @@
                     "lg": 6,
                     "label": "botPassword",
                     "help": "helpBotPassword"
+                },
+                "autoJoin": {
+                    "newLine": true,
+                    "type": "checkbox",
+                    "sm": 12,
+                    "md": 6,
+                    "lg": 6,
+                    "label": "autoJoin",
+                    "help": "helpAutoJoin"
                 }
             }
         }
