--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.2.2",
-    "matrix-js-sdk": "^25.1.1"
+    "@iobroker/adapter-core": "^3.2.3",
+    "matrix-js-sdk": "^32.4.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
@@ -34,7 +34,8 @@
     "@alcalzone/release-script-plugin-manual-review": "^3.5.9",
     "@iobroker/adapter-dev": "^1.2.0",
     "@iobroker/adapter-react": "^2.2.4",
-    "@iobroker/testing": "^4.1.3",
+    "@iobroker/eslint-config": "^1.0.0",
+    "@iobroker/testing": "^5.0.0",
     "@material-ui/core": "^4.12.4",
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
@@ -48,8 +49,6 @@
     "assertthat": "^6.5.2",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.41.0",
-    "eslint-plugin-react": "^7.32.2",
     "mocha": "^10.2.0",
     "proxyquire": "^2.1.3",
     "react": "^17.0.2",
@@ -75,7 +74,7 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:js && npm run test:package",
     "check": "tsc --noEmit -p tsconfig.check.json",
-    "lint": "eslint --ext .js,.jsx",
+    "lint": "eslint -c eslint.config.mjs",
     "translate": "translate-adapter",
     "release": "release-script"
   },
