--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "message",
     "matrix"
   ],
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/oelison/ioBroker.matrix-org"
@@ -25,7 +26,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^3.2.3",
-    "matrix-js-sdk": "^32.4.0"
+    "matrix-js-sdk": "^36.0.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
