--- a/package.json
+++ b/package.json
@@ -29,34 +29,34 @@
     "matrix-js-sdk": "^36.0.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^3.5.9",
-    "@alcalzone/release-script-plugin-iobroker": "^3.5.9",
-    "@alcalzone/release-script-plugin-license": "^3.5.9",
-    "@alcalzone/release-script-plugin-manual-review": "^3.5.9",
-    "@iobroker/adapter-dev": "^1.2.0",
+    "@alcalzone/release-script": "^3.8.0",
+    "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
+    "@alcalzone/release-script-plugin-license": "^3.7.0",
+    "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+    "@iobroker/adapter-dev": "^1.4.0",
     "@iobroker/adapter-react": "^2.2.4",
-    "@iobroker/eslint-config": "^1.0.0",
-    "@iobroker/testing": "^5.0.3",
+    "@iobroker/eslint-config": "^2.0.1",
+    "@iobroker/testing": "^5.0.4",
     "@material-ui/core": "^4.12.4",
-    "@types/chai": "^4.3.5",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.16.15",
-    "@types/proxyquire": "^1.3.28",
+    "@types/chai": "^5.0.1",
+    "@types/chai-as-promised": "^8.0.2",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^22.15.3",
+    "@types/proxyquire": "^1.3.31",
     "@types/react": "^17.0.60",
     "@types/react-dom": "^17.0.20",
-    "@types/sinon": "^10.0.15",
-    "@types/sinon-chai": "^3.2.9",
+    "@types/sinon": "^17.0.4",
+    "@types/sinon-chai": "^4.0.0",
     "assertthat": "^6.5.2",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^10.2.0",
+    "chai": "^5.2.0",
+    "chai-as-promised": "^8.0.1",
+    "mocha": "^11.1.0",
     "proxyquire": "^2.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sinon": "^15.1.0",
-    "sinon-chai": "^3.7.0",
-    "typescript": "~5.0.4"
+    "sinon": "^20.0.0",
+    "sinon-chai": "^4.0.0",
+    "typescript": "^5.8.3"
   },
   "main": "main.js",
   "files": [
