Only updates no new function * upgrade matrix-js-sdk to 38.4.0 node 22 required * switch to ESM * eslint 9 (what a messi commit) Issue: NO-TICKET

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# No dot-directories except github/vscode
+# No dot-directories except github
 .*/
-!.vscode/
 !.github/
 
 *.code-workspace
@@ -18,3 +17,5 @@ admin/i18n/*/flat.txt
 /.vscode
 
 /admin/build
+
+/.commitinfo
